# goit-algo2-hw-06

./: pyproject.toml  task_1.py
